# red-team-osint-tool

./: BUILD _SYSTEM_README.md  BUILD_QUICK_REF.txt  FILE #2: config.example.yml  LICENSE  README.md  SECURITY.md  Vortex.html  WINDOWS_BUILD_GUIDE.MD  api_server.py  config.yml  main.py  pyproject.toml  requirements.txt  run.py
frontend/frontend/: package.json
frontend/frontend/frontend/src/: Dashboard.jsx  Directory Structure text
frontend/frontend/frontend/src/osinttool/scrapers/: rss_scraper.py
frontend/frontend/frontend/src/osinttool/scrapers/osinttool/: db_writer.py:
frontend/frontend/frontend/src/osinttool/scrapers/osinttool/database/: React Frontend Integration (Connecting to Flask)  schema.sql
osinttool/: __init__.py  cli.py  config.py  db.py  scheduler.py
osinttool/alerts/: __init__.py  email_smtp.py  webhook.py
osinttool/enrich/: __init__.py  diff.py  hashing.py  ioc.py  whois_dns.py
osinttool/sources/: __init__.py  base.py  http.py  onion.py  rss.py
osinttool/utils/: logging.py  redact.py  requests.py  text.py
