[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red-team-osint-tool"
version = "1.0.0"
description = "A Python-based red-team OSINT tool with automation and dark web monitoring capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "POWDER-RANGER", email = "systems.architect@example.com"}
]
maintainers = [
    {name = "POWDER-RANGER", email = "systems.architect@example.com"}
]
keywords = [
    "osint",
    "red-team",
    "reconnaissance",
    "security",
    "penetration-testing",
    "information-gathering",
    "dark-web-monitoring",
    "threat-intelligence"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring"
]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-whois>=0.8.0",
    "shodan>=1.31.0",
    "twython>=3.9.1",
    "dnspython>=2.4.0",
    "pyyaml>=6.0.1",
    "urllib3>=2.0.0",
    "certifi>=2023.0.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.4.0",
    "pip-audit>=2.6.0"
]

tor = [
    "PySocks>=1.7.1",
    "stem>=1.8.2"
]

all = [
    "red-team-osint-tool[dev,tor]"
]

[project.urls]
Homepage = "https://github.com/POWDER-RANGER/red-team-osint-tool"
Repository = "https://github.com/POWDER-RANGER/red-team-osint-tool"
Issues = "https://github.com/POWDER-RANGER/red-team-osint-tool/issues"
Documentation = "https://github.com/POWDER-RANGER/red-team-osint-tool#readme"

[project.scripts]
rtosint = "osinttool.cli:main"
red-team-osint = "osinttool.cli:main"

[tool.setuptools]
packages = ["osinttool"]

[tool.setuptools.package-data]
osinttool = ["*.yml", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=osinttool",
    "--cov-report=term-missing",
    "--cov-report=html"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["osinttool"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
